# reprobench

./: .editorconfig  .gitignore  LICENSE  Pipfile  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
conda/: meta.yaml
docs/: conf.py  index.rst  modules.rst  reprobench.executors.rst  reprobench.managers.local.rst  reprobench.managers.rst  reprobench.managers.slurm.rst  reprobench.rst  requirements.txt
docs/guide/: index.rst
examples/: .gitignore
examples/sat/: benchmark.yml
examples/sat/sat/: validate.py
examples/sat/tools/: glucose.pcs  glucose.py  lingeling.pcs  lingeling.py
examples/satlib/: .gitignore  benchmark.yml
examples/satlib/satlib/: validate.py
examples/satlib/tools/: __init__.py  lingeling.py
examples/sudokusat/: benchmark.yml  sudoku.cnf
examples/sudokusat/sudoku/: playground.ipynb  validate.py
examples/sudokusat/tasks/sudoku/easy/: ai-escargot.txt  table9-1.txt  table9-2.txt  table9-3.txt  table9-4.txt  table9-5.txt
examples/sudokusat/tasks/sudoku/hard/: table144-2.txt
examples/sudokusat/tools/: .gitignore  __init__.py  sudoku_team1  sudoku_team1.py
reprobench/: __init__.py  console.py  utils.py
reprobench/console/: decorators.py  main.py  status.py
reprobench/core/: analyzer.py  base.py  bases.py  bootstrap.py  db.py  events.py  exceptions.py  handler.py  observers.py  schema.py  server.py  sysinfo.py  update.py  worker.py
reprobench/core/bootstrap/: __init__.py  client.py  server.py
reprobench/executors/: __init__.py  base.py  db.py  events.py  psmon.py  pynisher.py  runsolver.py
reprobench/managers/: __init__.py  base.py
reprobench/managers/local/: __init__.py  manager.py
reprobench/managers/slurm/: __init__.py  manager.py  utils.py
reprobench/runners/: __init__.py  base.py  local.py
reprobench/runners/local/: __init__.py  runner.py  worker.py
reprobench/runners/slurm/: __init__.py  runner.py  server.py  slurm.compile.job.tpl  slurm.job.tpl  slurm.run.job.tpl  slurm.server.job.tpl  slurm_worker.py  utils.py  worker.py
reprobench/statistics/exports/: __init__.py  base.py  csv.py  json.py
reprobench/statistics/plots/: __init__.py  base.py
reprobench/statistics/plots/cactus/: __init__.py  template.ipynb
reprobench/statistics/tables/: __init__.py  base.py  run.py
reprobench/task_sources/: base.py  file.py  local.py  url.py
reprobench/task_sources/doi/: __init__.py  base.py  zenodo.py
reprobench/tools/: executable.py  reprozip.py
src/reprobench/core/: bases.py  schema.py
src/reprobench/executors/: isolate.py  pynisher.py  runsolver.py
src/reprobench/runners/: __init__.py  local.py
