[tool.poetry]
name = "reprobench"
version = "0.10.0.dev23"
readme = "README.md"
description = "Reproducible Benchmark for Everyone"
authors = ["Rakha Kanz Kautsar <rkkautsar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
strictyaml = "^1.0"
loguru = "^0.2.5"
click = "^7.0"
tqdm = "^4.31"
pathspec = "^0.5.9"
requests = "^2.21"
numpy = "^1.16"
psmon = { version = "^1.1.0", optional = true }
psutil = { version = "^5.6", optional = true }
py-cpuinfo = { version = ">=4,<6", optional = true }
msgpack-python = { version = "^0.5.6", optional = true }
pyzmq = { version = "^18.0", optional = true }
gevent = { version = "^1.4", optional = true }
peewee = { version = "^3.9", optional = true }
apsw = { version = "^3.9", optional = true }
configspace = { version = "^0.4.10", optional = true }
pandas = { version = "^0.24.2", optional = true }
papermill = { version = "^0.19.1", optional = true }
retrying = "^1.3"

[tool.poetry.extras]
sysinfo = ["psutil", "py-cpuinfo"]
server = ["pyzmq", "gevent", "peewee", "apsw", "msgpack-python"]
psmon = ["psmon"]
client = ["pyzmq", "msgpack-python"]
pcs = ["configspace"]
analytics = ["peewee", "apsw", "pandas", "papermill"]

[tool.poetry.dev-dependencies]
black = "=19.3b0"

[tool.poetry.scripts]
reprobench = "reprobench.console.main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
