[metadata]
name = reprobench
version = attr: src.reprobench.VERSION
description = Reproducible Benchmark for Everyone
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
package_dir=
    =src
packages=find:
scripts =
  bin/reprobench
install_requires =
  pyyaml
  peewee
  pynisher

[options.packages.find]
where=src
