[metadata]
name = reprobench
version = attr: reprobench.VERSION
description = Reproducible Benchmark for Everyone
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
packages=
  reprobench
scripts =
  bin/reprobench
install_requires =
  strictyaml
  peewee
  pynisher

[options.packages.find]
where=src
