[metadata]
name = reprobench
version = attr: reprobench.VERSION
description = Reproducible Benchmark for Everyone
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing
    Topic :: System :: Distributed Computing

[options]
zip_safe = True
packages=
  reprobench
scripts =
  bin/reprobench
install_requires =
  strictyaml
  peewee
  pynisher

[options.packages.find]
where=src
